modificacion de Redes Sociales

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="padding-global">
                     <div class="container-large">
                         <div class="">
-                            <div class="margin-bottom margin-large">
+                            <div class="margin-bottom margin-large mt-5">
                                 <div data-w-id="7790c7f5-e606-0e16-7ece-290f34840e41" class="max-width-large">
                                     <div class="margin-bottom margin-small">
                                         <h2>Nuestros Conferencistas</h2>
@@ -259,17 +259,12 @@
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Manuel Lujan</div>
-                                                <div class="text-size-medium"> Maestría en Estomatología opción
-                                                    Prostodoncia.</div>
+                                                <div class="text-size-medium"> Titulo</div>
                                                 <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
                                                     adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
                                                     Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla. Suspendisse nec justo
-                                                    bibendum, pellentesque urna eget, bibendum erat. Vivamus aliquam
-                                                    feugiat lorem vitae egestas. Aliquam varius diam ac enim fringilla,
-                                                    vel cursus diam fermentum. Phasellus gravida porta mauris. Nam
-                                                    sollicitudin odio nunc, varius ornare odio tempor eu. Sed dignissim
-                                                    viverra ex a malesuada.</div>
+                                                    sapien, nec mattis tortor eros a nulla.
+                                                </div>
                                                 <div class="redes-c">
 
                                                 </div>
@@ -289,12 +284,8 @@
                                                 <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
                                                     adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
                                                     Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla. Suspendisse nec justo
-                                                    bibendum, pellentesque urna eget, bibendum erat. Vivamus aliquam
-                                                    feugiat lorem vitae egestas. Aliquam varius diam ac enim fringilla,
-                                                    vel cursus diam fermentum. Phasellus gravida porta mauris. Nam
-                                                    sollicitudin odio nunc, varius ornare odio tempor eu. Sed dignissim
-                                                    viverra ex a malesuada.</div>
+                                                    sapien, nec mattis tortor eros a nulla.
+                                                </div>
                                                 <div class="redes-c">
 
                                                 </div>
@@ -314,12 +305,8 @@
                                                 <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
                                                     adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
                                                     Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla. Suspendisse nec justo
-                                                    bibendum, pellentesque urna eget, bibendum erat. Vivamus aliquam
-                                                    feugiat lorem vitae egestas. Aliquam varius diam ac enim fringilla,
-                                                    vel cursus diam fermentum. Phasellus gravida porta mauris. Nam
-                                                    sollicitudin odio nunc, varius ornare odio tempor eu. Sed dignissim
-                                                    viverra ex a malesuada.</div>
+                                                    sapien, nec mattis tortor eros a nulla.
+                                                </div>
                                                 <div class="redes-c">
 
                                                 </div>
@@ -339,12 +326,8 @@
                                                 <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
                                                     adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
                                                     Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla. Suspendisse nec justo
-                                                    bibendum, pellentesque urna eget, bibendum erat. Vivamus aliquam
-                                                    feugiat lorem vitae egestas. Aliquam varius diam ac enim fringilla,
-                                                    vel cursus diam fermentum. Phasellus gravida porta mauris. Nam
-                                                    sollicitudin odio nunc, varius ornare odio tempor eu. Sed dignissim
-                                                    viverra ex a malesuada.</div>
+                                                    sapien, nec mattis tortor eros a nulla.
+                                                </div>
                                                 <div class="redes-c">
 
                                                 </div>
@@ -364,12 +347,8 @@
                                                 <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
                                                     adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
                                                     Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla. Suspendisse nec justo
-                                                    bibendum, pellentesque urna eget, bibendum erat. Vivamus aliquam
-                                                    feugiat lorem vitae egestas. Aliquam varius diam ac enim fringilla,
-                                                    vel cursus diam fermentum. Phasellus gravida porta mauris. Nam
-                                                    sollicitudin odio nunc, varius ornare odio tempor eu. Sed dignissim
-                                                    viverra ex a malesuada.</div>
+                                                    sapien, nec mattis tortor eros a nulla.
+                                                </div>
                                                 <div class="redes-c">
 
                                                 </div>
@@ -389,12 +368,8 @@
                                                 <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
                                                     adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
                                                     Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla. Suspendisse nec justo
-                                                    bibendum, pellentesque urna eget, bibendum erat. Vivamus aliquam
-                                                    feugiat lorem vitae egestas. Aliquam varius diam ac enim fringilla,
-                                                    vel cursus diam fermentum. Phasellus gravida porta mauris. Nam
-                                                    sollicitudin odio nunc, varius ornare odio tempor eu. Sed dignissim
-                                                    viverra ex a malesuada.</div>
+                                                    sapien, nec mattis tortor eros a nulla.
+                                                </div>
                                                 <div class="redes-c">
 
                                                 </div>
@@ -666,7 +641,7 @@
 
                                     </div>
                                     <div
-                                        class="margin-top margin-medium d-flex justify-content-center justify-content-md-start">
+                                        class="margin-top margin-medium d-flex justify-content-sm-center justify-content-md-start">
                                         <a href="#tickets" class="button w-button">Link de Ubicación</a>
                                     </div>
                                 </div>
@@ -950,28 +925,23 @@
                                 </div>
                                 <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                     class="w-layout-grid footer-social-list">
-                                    <a data-w-id="7bb6a5d1-d920-daa7-a18a-a375547d8c97" href="#" target="_blank"
-                                        class="footer-social-link w-inline-block">
+                                    <a href="#" class="footer-social-link w-inline-block">
                                         <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da0157947a068ca9dad2_facebook-logo-duotone.svg"
                                             loading="lazy" alt="Facebook Icon" class="icon-1x1-small" />
                                     </a>
-                                    <a data-w-id="7bb6a5d1-d920-daa7-a18a-a375547d8c99" href="#" target="_blank"
-                                        class="footer-social-link w-inline-block">
+                                    <a href="#" class="footer-social-link w-inline-block">
                                         <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da01a6a5ea3f6c6c2e2a_instagram-logo-duotone.svg"
                                             loading="lazy" alt="Instagram Icon" class="icon-1x1-small" />
                                     </a>
-                                    <a data-w-id="7bb6a5d1-d920-daa7-a18a-a375547d8c9b" href="#" target="_blank"
-                                        class="footer-social-link w-inline-block">
+                                    <a href="#" class="footer-social-link w-inline-block">
                                         <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da0154c51662c8461b93_linkedin-logo-duotone.svg"
                                             loading="lazy" alt="Linkedin Icon" class="icon-1x1-small" />
                                     </a>
-                                    <a data-w-id="7bb6a5d1-d920-daa7-a18a-a375547d8c9d" href="#"
-                                        class="footer-social-link w-inline-block">
+                                    <a href="#" class="footer-social-link w-inline-block">
                                         <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da01e0806a1865576908_twitter-logo-duotone.svg"
                                             loading="lazy" alt="Twitter Icon" class="icon-1x1-small" />
                                     </a>
-                                    <a data-w-id="7bb6a5d1-d920-daa7-a18a-a375547d8c9f" href="#"
-                                        class="footer-social-link w-inline-block">
+                                    <a href="#" class="footer-social-link w-inline-block">
                                         <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da01e0806ad500576907_youtube-logo-duotone.svg"
                                             loading="lazy" alt="Youtube Icon" class="icon-1x1-small" />
                                     </a>
