modificacion de boton

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
                                 <div class="d-grid d-md-flex justify-content-md-center">
                                     <input class="btn px-5 text-uppercase button w-button" type="submit"
-                                        value="Enviar Formulario">
+                                        value="Proceder al pago">
                                 </div>
                             </form>
                         </div>
@@ -233,11 +233,7 @@
             </div>
 
 
-            <!-- 
-<span class="invalid-feedback">Debe colocar un teléfono</span>
-                                        <span class="valid-feedback">Correcto!</span>
 
-             -->
             <section id="conferencistas" class="section-home-speakers p-1">
                 <div class="padding-global">
                     <div class="container-large">
