--- a/index.html
+++ b/index.html
@@ -647,11 +647,10 @@
                                 <div id="w-node-b38ebd88-2d3c-574e-8f8f-d4a284f58d05-3863c98b"
                                     data-w-id="b38ebd88-2d3c-574e-8f8f-d4a284f58d05" class="location-image-wrapper">
                                     <img class="image"
-                                        src="https://assets.website-files.com/64463f5f0937fac90063c9a3/64468f740b194216121100a6_pexels-matheus-bertelli-15141532%20(1).webp"
+                                        src="./assets/ubicacion.jpg"
                                         alt="Location Image"
                                         sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, (max-width: 1439px) 44vw, 600px"
-                                        data-w-id="b38ebd88-2d3c-574e-8f8f-d4a284f58d06" loading="lazy"
-                                        srcset="https://assets.website-files.com/64463f5f0937fac90063c9a3/64468f740b194216121100a6_pexels-matheus-bertelli-15141532%20(1)-p-500.webp 500w, https://assets.website-files.com/64463f5f0937fac90063c9a3/64468f740b194216121100a6_pexels-matheus-bertelli-15141532%20(1)-p-800.webp 800w, https://assets.website-files.com/64463f5f0937fac90063c9a3/64468f740b194216121100a6_pexels-matheus-bertelli-15141532%20(1).webp 1200w" />
+                                        data-w-id="b38ebd88-2d3c-574e-8f8f-d4a284f58d06" loading="lazy"/>
                                 </div>
                             </div>
                         </div>
