cambio de formulario

--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
                                         <label for="nombre" class="form-label fw-bold text-align-start">Nombre:</label>
                                         <input type="text" class="form-control" name="nombre" id="nombre"
                                             placeholder="Ej: Pedro" required>
-                                        <span class="invalid-feedback">Debe colocar un Nombre</span>
-                                        <span class="valid-feedback">Correcto!</span>
+
                                     </div>
 
                                     <div class="">
@@ -205,16 +204,14 @@
                                             class="form-label fw-bold text-align-start">Apellido:</label>
                                         <input type="text" class="form-control" name="apellido" id="apellido"
                                             placeholder="Ej: Lopez" required>
-                                        <span class="invalid-feedback">Debe colocar un Apellido</span>
-                                        <span class="valid-feedback">Correcto!</span>
+
                                     </div>
 
                                     <div class="">
                                         <label for="email" class="form-label fw-bold text-align-start">Email:</label>
                                         <input required minlength="4" type="email" class="form-control" name="email"
                                             id="email" placeholder="Ej: email@domain.com">
-                                        <span class="invalid-feedback">Debe colocar un Email</span>
-                                        <span class="valid-feedback">Correcto!</span>
+
                                     </div>
 
                                     <div class="">
@@ -222,13 +219,13 @@
                                             class="form-label fw-bold text-align-start">Teléfono:</label>
                                         <input required type="tel" minlength="4" class="form-control" name="telefono"
                                             id="telefono" placeholder="Ej: +52 (123) 4567890">
-                                        <span class="invalid-feedback">Debe colocar un teléfono</span>
-                                        <span class="valid-feedback">Correcto!</span>
+
                                     </div>
                                 </div>
 
                                 <div class="d-grid d-md-flex justify-content-md-center">
-                                    <button id="payment-button" class="btn px-5 text-uppercase button w-button" type="submit">
+                                    <button id="payment-button" class="btn px-5 text-uppercase button w-button"
+                                        type="submit">
                                         Proceder al pago
                                     </button>
                                 </div>
@@ -665,11 +662,9 @@
                                 </div>
                                 <div id="w-node-b38ebd88-2d3c-574e-8f8f-d4a284f58d05-3863c98b"
                                     data-w-id="b38ebd88-2d3c-574e-8f8f-d4a284f58d05" class="location-image-wrapper">
-                                    <img class="image"
-                                        src="./assets/ubicacion.jpg"
-                                        alt="Location Image"
+                                    <img class="image" src="./assets/ubicacion.jpg" alt="Location Image"
                                         sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, (max-width: 1439px) 44vw, 600px"
-                                        data-w-id="b38ebd88-2d3c-574e-8f8f-d4a284f58d06" loading="lazy"/>
+                                        data-w-id="b38ebd88-2d3c-574e-8f8f-d4a284f58d06" loading="lazy" />
                                 </div>
                             </div>
                         </div>
