--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <h3>Registro de Usuario</h3>
 
                         <div class="row justify-content-center">
-                            <form id="registroForm" class="col-md-8 needs-validation" novalidate>
+                            <form id="registroForm" class="col-md-8">
                                 <div class="contenedor-inputs">
                                     <div class="">
                                         <label for="nombre" class="form-label fw-bold text-align-start">Nombre:</label>
