Modificación en las direcciones

--- a/index.html
+++ b/index.html
@@ -632,9 +632,7 @@
                                     </div>
                                     <div class="margin-bottom margin-medium">
                                         <p class="text-size-medium">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-                                            enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros
-                                            dolor.<br />
+                                            El Centro de Convenciones y Exposiciones de Chihuahua es uno de los lugares más importantes para eventos y convenciones en la ciudad de Chihuahua. Está ubicado en una zona estratégica y cuenta con instalaciones modernas y versátiles para albergar una amplia gama de eventos, desde congresos y convenciones hasta exposiciones y eventos sociales.<br />
                                         </p>
                                     </div>
                                     <div class="w-layout-grid location-list">
@@ -646,19 +644,17 @@
                                             </div>
                                             <div class="location-item-content-wrapper">
                                                 <div class="margin-bottom margin-xsmall">
-                                                    <h3 class="heading-style-h5">Directions</h3>
+                                                    <h3 class="heading-style-h5">Direcciones</h3>
                                                 </div>
-                                                <p class="text-size-medium">Lorem ipsum dolor sit amet consectetur
-                                                    adipisicing elit. Fugit ipsum voluptatem cum eligendi autem eos
-                                                    officia consequatur hic asperiores soluta! Laboriosam obcaecati,
-                                                    eaque quam veniam id totam officiis perferendis quae?</p>
+                                                <p class="text-size-medium">
+                                                    El Centro de Convenciones y Exposiciones de Chihuahua está ubicado en Av. Tecnológico 1900, Santo Niño, 31200 Chihuahua, Chih. El centro cuenta con amplias áreas de estacionamiento para los asistentes.</p>
                                             </div>
                                         </div>
 
                                     </div>
                                     <div
                                         class="margin-top margin-medium d-flex justify-content-sm-center justify-content-md-start">
-                                        <a href="#tickets" class="button w-button">Link de Ubicación</a>
+                                        <a href="https://maps.app.goo.gl/keEKsyF54dcjXNub6" class="button w-button">Link de Ubicación</a>
                                     </div>
                                 </div>
                                 <div id="w-node-b38ebd88-2d3c-574e-8f8f-d4a284f58d05-3863c98b"
