--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
         </footer>
         </div>
                 </div>  
-                <script src="./scripts/checkout.js"></script>
+                <script src="scripts/checkout.js"></script>
                 <script src="scripts/app.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
