Cambios en el puerto y titulo del evento

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                                     <div class="text-align-center">
                                         <div class="max-width-large">
                                             <div class="margin-bottom margin-xsmall">
-                                                <div class="subheading">Evento titulo</div>
+                                                <div class="subheading">Congreso Dental Chihuahuense </div>
                                             </div>
                                             <div class="margin-bottom margin-small">
-                                                <h1>Lorem ipsum, dolor sit amet </h1>
+                                                <h1>CODEC</h1>
                                             </div>
                                             <div class="header-infos-wrapper">
                                                 <div class="header-infos-item">
