Corrección de paises

--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                                     document.addEventListener("DOMContentLoaded", function() {
                                         const input = document.querySelector("#phone");
                                         window.intlTelInput(input, {
-                                            initialCountry: "us",
+                                            initialCountry: "mx",
                                             strictMode: true,
-                                            utilsScript: "/intl-tel-input/js/utils.js?1716383386062" // just for formatting/placeholders etc
+                                            utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js" // just for formatting/placeholders etc
 });
                                     });
                                 </script>
